# fssa-diagnostics-report

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/analysis/: aggregate_metrics.csv  profile_field_completion.csv  session_pair_relevance.csv  session_relevance_summary.csv  shareable_student_sessions_full.csv  student_intent_and_problem_summary.md  student_responses_by_intent.csv  summary_report.md  unique_student_problem_list.csv  user_sessions_feedback.csv  whatsapp_feedback_tagged.csv  whatsapp_feedback_unmatched.csv  whatsapp_feedback_with_problem_themes.csv  whatsapp_issue_list.csv  whatsapp_issue_list.md
scripts/: download_s3_agents.sh  export_shareable_session_dataset.py  generate_user_session_feedback_analysis.py  group_student_responses_and_feedback.py  process_whatsapp_exports.py  split_export_jsons.py
